[package]
name = "zimg"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "zimg/z.lib bindings"
repository = "https://github.com/rust-av/zimg-rs"
readme = "README.md"
keywords = ["color conversion", "rescale","zimg"]

[dependencies]
zimg-sys = { path = "zimg-sys" }
av-data = "0.2.0"

[workspace]
members = ["zimg-sys"]
