[package]
name = "zimg-sys"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to zImg/z.lib"
repository = "https://github.com/rust-av/zimg-rs"

[build-dependencies]
bindgen = "0.54"
system-deps = "1.3"

[package.metadata.system-deps]
zimg = "2.7.4"

[dependencies]
