[package]
name = "zimg-sys"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to zImg/z.lib"
repository = "https://github.com/rust-av/zimg-rs"

[build-dependencies]
bindgen = "0.59"
system-deps = "3.2"

[package.metadata.system-deps]
zimg = "2.7.4"

[dependencies]
